<?xml version="1.0"?>
<package format="2">
  <name>group4_rwa1</name>
  <version>0.1.0</version>
  <description>Adding a camera/sensor in the environment.</description>
  <maintainer email="ip1996@umd.edu">Ishan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
